--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,5 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["."]
+packages = ["strava_mcp"]
 
