--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,8 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["strava_mcp"]
 
+[dependency-groups]
+dev = [
+    "pytest-cov>=7.0.0",
+]
+
