feat: integrate Monty for secure data analysis
Adds a new experimental tool `analyze_data` that leverages `pydantic-monty`
to securely execute Python code for analyzing Strava data. This allows agents
to perform complex calculations (e.g., aggregations, filtering) on data
without requiring the data to be processed by the LLM itself or hallucinated.

Changes:
- Add `pydantic-monty` dependency.
- Create `strava_mcp/services/analysis.py` to handle Monty execution.
- Add `analyze_data_tool` to `server.py`.
- Add comprehensive tests for the analysis service and tool wrapper.
- Update README with "Experimental" section and Monty documentation.

This addresses the need for precise mathematical operations on activity data.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastmcp",
     "stravalib",
     "python-dotenv",
+    "pydantic-monty>=0.0.7",
 ]
 
 [project.optional-dependencies]
